--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "Package-DeprecationManager-0.13.tar.gz": 6fe1dc4e09e738c560ba0526e08ce382d3facdc7
+  Package-DeprecationManager-0.17.tar.gz: 0c7790daa2df3c5a19b15ee5f66d6c4d8ccb3b04
